--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Penguin Fashion</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+              }
+            }
+          }
+        }
+      </script>
+  </head>
+  <body class="">
+    <!-- header section -->
+    <section class="header bg-[#FFFBF0]">
+      <!-- header container -->
+      <div class="w-[60%] mx-auto">
+        <nav class="flex justify-between">
+          <img src="./icons/logo.png" alt="" class="w-56 h-8" />
+          <div class="flex gap-10">
+            <p>Home</p>
+            <p>Product</p>
+            <p>About us</p>
+            <p>Contact us</p>
+          </div>
+        </nav>
+      </div>
+    </section>
+  </body>
 </html>
