--- a/index.html
+++ b/index.html
@@ -65,29 +65,171 @@
               <span class="text-[#363958]">of Winter</span>
             </h1>
             <p class="mt-2 text-[#3E3E3E]">
-              Lorem Ipsum is simply dummy text of the printing <br> and typesetting
-              industry.
+              Lorem Ipsum is simply dummy text of the printing <br />
+              and typesetting industry.
             </p>
-            <button class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white flex gap-1 items-center rounded-md py-3 px-6 my-2">
-               <img src="icons/shopping-cart 1.png " alt="" class="h-5">
-               <p>BUY NOW</p>
+            <button
+              class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white flex gap-1 items-center rounded-md py-3 px-6 my-2"
+            >
+              <img src="icons/shopping-cart 1.png " alt="" class="h-5" />
+              <p>BUY NOW</p>
             </button>
           </div>
           <div>
-            <img src="./images/model.png" alt="">
+            <img src="./images/model.png" alt="" />
           </div>
         </div>
       </div>
     </section>
     <!-- body section -->
-     <section class="w-[100%] px-4 mx-auto  md:w-[80%] md:px-0 lg:w-[60%] lg:px-0 mt-10">
-        <!-- woman section -->
-         <div class="woman">
-            <h1 class="font-bebas text-5xl text-[#363958] mb-7">Woman Jacket</h1>
-            <div class="card flex gap-2 justify-between">
-
+    <section
+      class="w-[100%] px-4 mx-auto md:w-[80%] md:px-0 lg:w-[60%] lg:px-0 mt-10"
+    >
+      <!-- woman section -->
+      <div class="woman">
+        <h1 class="font-bebas text-5xl text-[#363958] mb-7">Woman Jacket</h1>
+        <div class="card grid  gap-3 md:grid-cols-2 lg:grid-cols-3 lg:justify-between">
+          <div class="p-3 shadow-sm rounded-lg">
+            <div class="bg-[#F1F1F1] p-6 rounded-lg">
+              <img src="./images/jacket-1.png" alt="" />
             </div>
-         </div>
-     </section>
+            <h2 class="text-2xl text-[#363958] font-bold py-4">
+              Yellow Coat Jacket
+            </h2>
+            <p class="text-[#3E3E3E]">
+              Lorem Ipsum is simply dummy text of the <br />
+              printing and typesetting industry.
+            </p>
+            <div class="flex justify-between my-3 items-center">
+              <p class="text-[#FABE4C] text-3xl font-black">$234</p>
+              <button
+                class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white flex gap-1 items-center rounded-md py-3 px-6 my-2"
+              >
+                <img src="icons/shopping-cart 1.png " alt="" class="h-5" />
+                <p>BUY NOW</p>
+              </button>
+            </div>
+          </div>
+          <!-- 2nd card -->
+          <div class="p-3 shadow-sm rounded-lg">
+            <div class="bg-[#F1F1F1] p-6 rounded-lg">
+              <img src="./images/jacket-2.png" alt="" />
+            </div>
+            <h2 class="text-2xl text-[#363958] font-bold py-4">
+              Ladies Jacket
+            </h2>
+            <p class="text-[#3E3E3E]">
+              Lorem Ipsum is simply dummy text of the <br />
+              printing and typesetting industry.
+            </p>
+            <div class="flex justify-between my-3 items-center">
+              <p class="text-[#FABE4C] text-3xl font-black">$234</p>
+              <button
+                class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white flex gap-1 items-center rounded-md py-3 px-6 my-2"
+              >
+                <img src="icons/shopping-cart 1.png " alt="" class="h-5" />
+                <p>BUY NOW</p>
+              </button>
+            </div>
+          </div>
+          <!-- 3rd card -->
+          <div class="p-3 shadow-sm rounded-lg">
+            <div class="bg-[#F1F1F1] p-6 rounded-lg">
+              <img src="./images/jacket-3.png" alt="" />
+            </div>
+            <h2 class="text-2xl text-[#363958] font-bold py-4">
+              Woman Leather Jacket
+            </h2>
+            <p class="text-[#3E3E3E]">
+              Lorem Ipsum is simply dummy text of the <br />
+              printing and typesetting industry.
+            </p>
+            <div class="flex justify-between my-3 items-center">
+              <p class="text-[#FABE4C] text-3xl font-black">$234</p>
+              <button
+                class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white flex gap-1 items-center rounded-md py-3 px-6 my-2"
+              >
+                <img src="icons/shopping-cart 1.png " alt="" class="h-5" />
+                <p>BUY NOW</p>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- man section -->
+      <div class="man mt-20">
+        <h1 class="font-bebas text-5xl text-[#363958] mb-7">Man Jacket</h1>
+        <div class="card grid  gap-3 md:grid-cols-2 lg:grid-cols-3 lg:justify-between">
+          <div class="p-3 shadow-sm rounded-lg">
+            <div class="bg-[#F1F1F1] p-6 rounded-lg">
+              <img src="./images/jacket-4.png" alt="" />
+            </div>
+            <h2 class="text-2xl text-[#363958] font-bold py-4">
+                Snowboard Jacket Mens
+            </h2>
+            <p class="text-[#3E3E3E]">
+              Lorem Ipsum is simply dummy text of the <br />
+              printing and typesetting industry.
+            </p>
+            <div class="flex justify-between my-3 items-center">
+              <p class="text-[#FABE4C] text-3xl font-black">$234</p>
+              <button
+                class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white flex gap-1 items-center rounded-md py-3 px-6 my-2"
+              >
+                <img src="icons/shopping-cart 1.png " alt="" class="h-5" />
+                <p>BUY NOW</p>
+              </button>
+            </div>
+          </div>
+          <!-- 2nd card -->
+          <div class="p-3 shadow-sm rounded-lg">
+            <div class="bg-[#F1F1F1] p-6 rounded-lg">
+              <img src="./images/jacket-5.png" alt="" />
+            </div>
+            <h2 class="text-2xl text-[#363958] font-bold py-4">
+                Man Leather Jackets
+            </h2>
+            <p class="text-[#3E3E3E]">
+              Lorem Ipsum is simply dummy text of the <br />
+              printing and typesetting industry.
+            </p>
+            <div class="flex justify-between my-3 items-center">
+              <p class="text-[#FABE4C] text-3xl font-black">$234</p>
+              <button
+                class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white flex gap-1 items-center rounded-md py-3 px-6 my-2"
+              >
+                <img src="icons/shopping-cart 1.png " alt="" class="h-5" />
+                <p>BUY NOW</p>
+              </button>
+            </div>
+          </div>
+          <!-- 3rd card -->
+          <div class="p-3 shadow-sm rounded-lg">
+            <div class="bg-[#F1F1F1] p-6 rounded-lg">
+              <img src="./images/jacket-6.png" alt="" />
+            </div>
+            <h2 class="text-2xl text-[#363958] font-bold py-4">
+                Man Casual Jackets
+            </h2>
+            <p class="text-[#3E3E3E]">
+              Lorem Ipsum is simply dummy text of the <br />
+              printing and typesetting industry.
+            </p>
+            <div class="flex justify-between my-3 items-center">
+              <p class="text-[#FABE4C] text-3xl font-black">$234</p>
+              <button
+                class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white flex gap-1 items-center rounded-md py-3 px-6 my-2"
+              >
+                <img src="icons/shopping-cart 1.png " alt="" class="h-5" />
+                <p>BUY NOW</p>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- footer start -->
+     
   </body>
 </html>
