--- a/index.html
+++ b/index.html
@@ -230,6 +230,37 @@
       </div>
     </section>
     <!-- footer start -->
-     
+     <footer class="w-[100%] px-4 md:w-[80%] md:px-0 mx-auto lg:w-[60%] lg:px-0 my-24">
+        <div class="grid grid-cols-1 gap-5 md:grid-cols-2">
+            <div class="pt-6 row-span-3 md:order-2">
+                <img src="./images/shopping.png" alt="">
+            </div>
+            <div class="flex items-center p-4 shadow rounded-md gap-5 md:order-1">
+                <img src="./icons/house.png" alt="" class="size-20">
+                <div>
+                    <h3 class="text-[#363958] text-2xl font-bold mb-3">Find the Perfect Fit</h3>
+                    <p class="text-[#3E3E3E]">Everybody is different, which is why we <br>
+                        offer styles for every body.</p>
+                </div>
+            </div>
+           
+            <div class="flex items-center p-4 shadow rounded-md gap-5 md:order-3">
+                <img src="./icons/box.png" alt="" class="size-20">
+                <div>
+                    <h3 class="text-[#363958] text-2xl font-bold mb-3">Free Exchanges</h3>
+                    <p class="text-[#3E3E3E]">One of the many reasons you can shop <br>
+                        with peace of mind.</p>
+                </div>
+            </div>
+            <div class="flex items-center p-4 shadow rounded-md gap-5 md:order-4">
+                <img src="./icons/question.png" alt="" class="size-20">
+                <div>
+                    <h3 class="text-[#363958] text-2xl font-bold mb-3">Contact Our Seller</h3>
+                    <p class="text-[#3E3E3E]">They are here to help you. That's quite <br>
+                        literally what we pay them for.</p>
+                </div>
+            </div>
+        </div>
+     </footer>
   </body>
 </html>
